--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.2",
   "license": "MIT",
   "scripts": {},
-  "predeploy": "npm run build -- --prod --baseHref=/qdave5.github.io/primoless-manager/",
+  "homepage": "http://qdave5.github.io/primoless-manager/",
+  "predeploy": "npm run build -- --prod --baseHref=/primoless-manager/",
+  "deploy": "gh-pages -d dist/apps/primoless-manager/",
   "private": true,
   "dependencies": {
     "react": "18.2.0",
@@ -40,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "gh-pages": "^5.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~20.0.3",
