--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.10.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
