--- a/package.json
+++ b/package.json
@@ -1,68 +1,87 @@
 {
   "name": "primoless-manager",
-  "version": "1.0.8",
+  "version": "1.0.12",
   "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "frontend": "nx serve frontend",
+    "deploy": "nx deploy frontend",
+    "buildall": "nx run-many --target=build"
   },
-  "homepage": "http://qdave5.github.io/primoless-manager/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/lab": "^5.0.0-alpha.120",
+    "@mui/material": "^5.11.10",
+    "core-js": "^3.28.0",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^1.4.1",
+    "react-i18next": "^12.1.5",
+    "react-markdown": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1",
-    "tslib": "^2.3.0"
+    "recharts": "^2.4.3",
+    "regenerator-runtime": "0.13.11",
+    "remark-gfm": "^3.0.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "tesseract.js": "^4.0.2",
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@nrwl/cypress": "15.9.2",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "15.9.2",
-    "@nrwl/vite": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
-    "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
+    "@babel/preset-react": "^7.18.6",
+    "@emotion/babel-plugin": "11.10.6",
+    "@nrwl/cypress": "15.7.2",
+    "@nrwl/eslint-plugin-nx": "15.7.2",
+    "@nrwl/jest": "15.7.2",
+    "@nrwl/js": "15.7.2",
+    "@nrwl/linter": "15.7.2",
+    "@nrwl/nx-cloud": "^15.3.5",
+    "@nrwl/react": "15.7.2",
+    "@nrwl/vite": "15.7.2",
+    "@nrwl/web": "15.7.2",
+    "@nrwl/webpack": "15.7.2",
+    "@nrwl/workspace": "15.7.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@svgr/webpack": "^6.5.1",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-react": "^3.0.0",
-    "@vitest/coverage-c8": "~0.25.8",
-    "@vitest/ui": "^0.25.8",
-    "babel-jest": "^29.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/ui": "^0.28.5",
+    "babel-jest": "28.1.3",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react": "7.32.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^5.0.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "jsdom": "~20.0.3",
-    "nx": "15.9.2",
-    "prettier": "^2.6.2",
+    "nx": "^15.7.2",
+    "prettier": "^2.8.4",
+    "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
-    "sass": "^1.55.0",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5",
-    "vite": "^4.0.1",
+    "typescript": "^4.9.5",
+    "url-loader": "^4.1.1",
+    "vite": "^4.0.4",
+    "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.2",
+    "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.25.8"
   }
 }
